# docs/swagger.json
@@ -818,6 +818,60 @@
         }
       }
     },
+    "/auth/get-oauth-url": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Get oauth url",
+        "operationId": "Email",
+        "description": "Get URL Auth GOOGLE",
+        "security": [],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/200_getOauthUrl"
+          },
+          "404": {
+            "$ref": "#/components/responses/404_oauthProvider"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/login/google": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Confirm Oauth",
+        "operationId": "code",
+        "description": "Confirm Oauth Code",
+        "security": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/confirmOauth"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/200_confirmOauth"
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/users": {
       "get": {
         "tags": [
@@ -1715,7 +1769,6 @@
                     "example": "Гуйлінь славиться своїми карстовими горами і річкою Лі. Ми вирушили у …"
                   },
                   "category": {
-                    "category": null,
                     "description": "Id category of the story",
                     "type": "string",
                     "example": "68fb50c80ae91338641121f0"
@@ -1956,6 +2009,18 @@
           "favoriteCount": 3,
           "createdAt": "2024-07-01T12:00:00Z",
           "updatedAt": "2024-07-02T10:00:00Z"
+        }
+      },
+      "confirmOauth": {
+        "type": "object",
+        "required": [
+          "code"
+        ],
+        "properties": {
+          "code": {
+            "type": "string",
+            "example": "4/0AVGzR1C_pl1wMJYJEHUbMcoZJxJMhNFiylBYgsZAGYlQ2sjC45CcdrrBpbWsLGk6LXPkog"
+          }
         }
       },
       "getUsers": {
@@ -2336,6 +2401,102 @@
                 "message": {
                   "type": "string",
                   "example": "Password was successfully reset!"
+                }
+              }
+            }
+          }
+        }
+      },
+      "200_getOauthUrl": {
+        "description": "Successfully get Google OAuth url!",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Successfully get Google OAuth url!"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "url"
+                  ],
+                  "properties": {
+                    "url": {
+                      "type": "string",
+                      "example": "https://accounts.google.com/o/oauth2/v2/auth?scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile&response_type=code&client_id=770526307847-kj0hk670jgi0ngs6d2m19ti0f2ti16v2.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fget-oauth-url"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "404_oauthProvider": {
+        "description": "OAuth provider not found",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 404
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Google OAuth provider not configured"
+                }
+              }
+            }
+          }
+        }
+      },
+      "200_confirmOauth": {
+        "description": "Successfully logged in via Google OAuth!",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Successfully logged in via Google OAuth!"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "user"
+                  ],
+                  "properties": {
+                    "user": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/session"
+                    }
+                  }
                 }
               }
             }
